tests/samples/negative/types/negative_unsigned_expression.ax
module negative_unsigned_expression;

fn main() -> i32 {
    let one: u32 = 1;
    let wrapped: u32 = -one;
    return cast(i32, wrapped);
}
